--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v1.0.0
         with:
           name: MyWebApplication
-          package: "./_build"
+          path: "./_build"
