--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          D:\SonarCloud\SonarScanner\SonarScanner.MSBuild.exe begin /k:"MyWebApplication /d:sonar.login="29d6e2cdf2f1707dc7eeef9fd7a8097f0c0bc1be" /d:sonar.host.url="http://localhost:8585/"
+          D:\SonarCloud\SonarScanner\SonarScanner.MSBuild.exe begin /k:"MyWebApplication /n:"MyWebApplication /d:sonar.login="29d6e2cdf2f1707dc7eeef9fd7a8097f0c0bc1be" /d:sonar.host.url="http://localhost:8585/"
 
       - name: Build Solution
         run: |
