--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          MSBuild.exe build MyWebApplication.sln
+          msbuild.exe build MyWebApplication.sln
           
       - name: SonarQube End
         env:
