--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
       - name: ReBuild Solution
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          shell: powershell
         run: |
           msbuild.exe build MyWebApplication.sln
           
