--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,24 @@ jobs:
           name: MyWebApplication
           path: "./_build"
 
-      - name: Deploy to IIS
-        run: |
-            iisreset /stop
-            Copy-Item ./MyWebApplication/* C:/inetpub/wwwroot/dotnetcore-webapp -Recurse -Force
-            iisreset /start
+  deploy:
+    runs-on: self-hosted
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v1.0.0
+        with:
+          name: ASP-app
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'GitHubApplication'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_1234 }}
+          package: .
