--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -54,14 +54,11 @@ jobs:
           msbuild.exe MyWebApplication.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
 
       - name: Run tests
-        uses: EasyDesk/action-dotnet-test@v1.0.0
-        with:
-          # test-args: '--logger "trx;LogFileName=test_results.trx" --collect:"XPlat Code Coverage"'
-          build-configuration: 'Release'
-          path: msbuild.exe MyWebApplication.sln # Adjust this to the path of your test project
-          skip-build: false
+        run: |
+          vstest.console.exe MyWebApplication.Tests\bin\Release\MyWebApplication.dll
+        env:
+          VSTEST_RUNNER: 'true'
         
-          
       # Build the Solution using the MSBuild for SonarQube Analysis
       - name: ReBuild Solution
         env:
