--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run tests
         run: |
-          vstest.console.exe MyWebApplication.Tests\bin\Release\MyWebApplication.dll
+          C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe MyWebApplication.Tests\bin\Release\MyWebApplication.dll
         env:
           VSTEST_RUNNER: 'true'
         
