Updated path of MyWebApplication.Tests

--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -31,12 +31,6 @@ jobs:
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
-      # Setup vstest action
-      - name: vstest-action
-        uses: microsoft/vstest-action@v1.0.0
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-
       # Install the Nuget Package
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v2.0.0
@@ -62,7 +56,7 @@ jobs:
       # Run the test cases
       - name: Run tests
         run: |
-          C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe MyWebApplication.Tests\bin\Release\MyWebApplication.dll
+          "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" .\MyWebApplication.Tests\bin\Release\MyWebApplication.Tests.dll
         env:
           VSTEST_RUNNER: 'true'
         
