--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -56,7 +56,7 @@ jobs:
       # Run the test cases
       - name: Run tests
         run: |
-          "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" .\MyWebApplication.Tests\bin\Release\MyWebApplication.Tests.dll
+          & "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" ".\MyWebApplication.Tests\bin\Release\MyWebApplication.Tests.dll"
         env:
           VSTEST_RUNNER: 'true'
         
