set the github workspace for current working directory

--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Run tests
         run: |
           & "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" ".\MyWebApplication.Tests\bin\Release\MyWebApplication.Tests.dll"
+        working-directory: ${{ github.workspace }}/MyWebApplication
         env:
           VSTEST_RUNNER: 'true'
         
