--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -56,7 +56,7 @@ jobs:
       # Run the test cases
       - name: Run tests
         run: |
-          & "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" "MyWebApplication.Tests\bin\Release\MyWebApplication.Tests.dll" --collect:"Code Coverage"
+          & "C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" "MyWebApplication.Tests\bin\Release\MyWebApplication.Tests.dll" --collect:"XPlat Code Coverage" --resultsDirectory:"TestResults"
         working-directory: ${{ github.workspace }}/
         env:
           VSTEST_RUNNER: 'true'
@@ -73,7 +73,7 @@ jobs:
       - name: Generate Coverage Report
         uses: danielpalme/ReportGenerator-GitHub-Action@5.4.3
         with:
-          reports: '**/TestResults/**/*.coverage'
+          reports: 'TestResults/**/coverage.cobertura.xml'
           targetdir: './coverage-report'
           reporttypes: 'HtmlInline_AzurePipelines;Cobertura'
       
