--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -74,6 +74,7 @@ jobs:
         shell: cmd
         run: |
           "D:\SonarQube 9.9\opencover.4.7.1221\OpenCover.Console.exe" -output:"opencover.xml" -register:user -target:"C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\TestPlatform\vstest.console.exe" -targetargs:"MyWebApplication.Tests\bin\Release\MyWebApplication.Tests.dll"
+        working-directory: ${{ github.workspace }}/
         # env:
         #   opencover: 'D:\SonarQube 8.9\opencover.4.6.519\OpenCover.Console.exe'
       
