--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -84,6 +84,7 @@ jobs:
         run: |
           if not exist "opencover.xml" (
             echo Coverage file not found!
+            echo pwd
             exit /b 1
           )
           for /f "tokens=2 delims='\"'" %%A in ('findstr sequenceCoverage opencover.xml') do set "COVERAGE=%%A"
