--- a/.github/workflows/MySonarAnalysis.yml
+++ b/.github/workflows/MySonarAnalysis.yml
@@ -107,17 +107,28 @@ jobs:
         shell: cmd
         run: echo Code Coverage is %percentage%%
 
-      # Verify Coverage Threshold - exit /b 1
+      # # Verify Coverage Threshold - exit /b 1
+      # - name: Verify Coverage Threshold
+      #   shell: powershell
+      #   run: |
+      #     echo Code Coverage is %percentage%%
+      #     if %percentage% LSS 80 (
+      #       echo Coverage %percentage%%% is below the threshold (80%).
+      #     ) else (
+      #       echo Coverage %percentage%%% meets the threshold (80% or higher).
+      #     )
+
       - name: Verify Coverage Threshold
-        shell: cmd
+        shell: powershell
         run: |
-          echo Code Coverage is %percentage%%
-          if %percentage% LSS 80 (
-            echo Coverage %percentage%%% is below the threshold (80%).
-          ) else (
-            echo Coverage %percentage%%% meets the threshold (80% or higher).
-          )
-      
+          Write-Output "Code Coverage is $env:percentage%"
+          if ($env:percentage -lt 80) {
+              Write-Error "Coverage $env:percentage% is below the threshold (80%)."
+              exit 1
+          } else {
+              Write-Output "Coverage $env:percentage% meets the threshold (80% or higher)."
+          }
+          
       # Publish quality profile and analysis report on SonarQube Dashboard
       - name: SonarQube End
         env:
